# ppl.nn

./: .clang-format  .gitignore  CMakeLists.txt  Jenkinsfile  LICENSE  README.md  build-for-test.py  build-for-test.sh  build.bat  build.sh
lua/: CMakeLists.txt  lua_dummy_load_resources.cc  lua_pplnn.cc  lua_type_creator.h  lua_type_creator_manager.h
lua/common/: lua_tensor_shape.cc  lua_tensor_shape.h
lua/engines/: lua_engine.cc  lua_engine.h
lua/engines/arm/: arm_ops.cc  lua_arm_engine.cc  lua_arm_engine_factory.cc  lua_arm_engine_options.cc  lua_engine.cc  lua_engine_factory.cc  lua_engine_options.cc  ops.cc
lua/engines/cuda/: cuda_ops.cc  lua_cuda_engine.cc  lua_cuda_engine_factory.cc  lua_cuda_engine_options.cc  lua_engine.cc  lua_engine_factory.cc  lua_engine_options.cc  ops.cc
lua/engines/riscv/: lua_engine.cc  lua_engine_factory.cc  lua_engine_options.cc  lua_riscv_engine.cc  lua_riscv_engine_factory.cc  lua_riscv_engine_options.cc  ops.cc  riscv_ops.cc
lua/engines/x86/: lua_engine.cc  lua_engine_factory.cc  lua_engine_options.cc  lua_x86_engine.cc  lua_x86_engine_factory.cc  lua_x86_engine_options.cc  ops.cc  x86_ops.cc
lua/models/onnx/: lua_onnx_runtime_builder.cc  lua_onnx_runtime_builder.h  lua_onnx_runtime_builder_factory.cc  lua_runtime_builder.cc  lua_runtime_builder.h  lua_runtime_builder_factory.cc  lua_runtime_builder_resources.cc  lua_runtime_builder_resources.h
lua/models/pmx/: lua_pmx_runtime_builder.cc  lua_pmx_runtime_builder.h  lua_pmx_runtime_builder_factory.cc  lua_runtime_builder.cc  lua_runtime_builder.h  lua_runtime_builder_factory.cc  lua_runtime_builder_resources.cc  lua_runtime_builder_resources.h
lua/runtime/: lua_runtime.cc  lua_runtime.h  lua_runtime_builder.cc  lua_runtime_builder.h  lua_tensor.cc  lua_tensor.h
lua/utils/: lua_version.cc
python/: CMakeLists.txt  load_resources.cc  py_dummy_load_resources.cc  py_pplnn.cc  py_type_creator.h  py_type_creator_manager.h
python/common/: py_device_context.cc  py_device_context.h  py_logger.cc  py_ndarray.cc  py_ndarray.h  py_tensor_shape.cc
python/engines/: py_engine.cc  py_engine.h
python/engines/arm/: arm_ops.cc  ops.cc  py_arm.h  py_arm_engine.cc  py_arm_engine.h  py_arm_engine_factory.cc  py_arm_engine_options.cc  py_engine.cc  py_engine.h  py_engine_factory.cc  py_engine_options.cc
python/engines/cuda/: cuda_ops.cc  py_cuda.h  py_cuda_engine.cc  py_cuda_engine.h  py_cuda_engine_factory.cc  py_cuda_engine_options.cc  py_engine.cc  py_engine.h  py_engine_factory.cc  py_engine_options.cc
python/engines/llm_cuda/: py_engine.cc  py_engine.h  py_engine_factory.cc  py_engine_options.cc  py_llm_cuda.h
python/engines/riscv/: ops.cc  py_engine.cc  py_engine.h  py_engine_factory.cc  py_engine_options.cc  py_riscv.h  py_riscv_engine.cc  py_riscv_engine.h  py_riscv_engine_factory.cc  py_riscv_engine_options.cc  riscv_ops.cc
python/engines/x86/: ops.cc  py_engine.cc  py_engine.h  py_engine_factory.cc  py_engine_options.cc  py_x86.h  py_x86_engine.cc  py_x86_engine.h  py_x86_engine_factory.cc  py_x86_engine_options.cc  x86_ops.cc
python/models/: py_model_options_base.cc  py_model_options_base.h
python/models/onnx/: py_onnx.h  py_onnx_runtime_builder.cc  py_onnx_runtime_builder.h  py_onnx_runtime_builder_factory.cc  py_runtime_builder.cc  py_runtime_builder.h  py_runtime_builder_factory.cc  py_runtime_builder_resources.cc  py_runtime_builder_resources.h
python/models/pmx/: py_load_model_options.cc  py_load_model_options.h  py_model_options.cc  py_model_options.h  py_pmx.h  py_pmx_runtime_builder.cc  py_pmx_runtime_builder.h  py_pmx_runtime_builder_factory.cc  py_runtime_builder.cc  py_runtime_builder.h  py_runtime_builder_factory.cc  py_runtime_builder_resources.cc  py_runtime_builder_resources.h  (+2 more)
python/package/: MANIFEST.in  build.sh  pyproject.toml  setup.cfg  setup.py
python/runtime/: py_runtime.cc  py_runtime.h  py_runtime_builder.cc  py_runtime_builder.h  py_runtime_options.cc  py_tensor.cc  py_tensor.h
python/utils/: py_version.cc
tests/: CMakeLists.txt
tests/common/: input_output_info_test.cc  tensor_buffer_info_test.cc  tensor_buffer_info_tools.h  tensor_shape_test.cc
tests/engines/: buffered_cpu_allocator_test.cc  echo_op.cc  echo_op.h  tmp_engine.h  tmp_engine_context.h  tmp_kernel.h
tests/ir/: full_graph_topo_test.cc  graph_builder.cc  graph_builder.h  graph_topo_test.cc  node_test.cc  partial_graph_topo_test.cc  utils_test.cc
tests/models/: onnx_graph_parser_test.cc  onnx_model_parser_test.cc  op_info_manager_test.cc
tests/optimizers/: engine_graph_partitioner_test.cc  simple_graph_partitioner_test.cc  special_type_graph_partitioner_test.cc  utils_test.cc
tests/params/: param_utils_manager_test.cc
tests/quantization/: quant_param_parser_test.cc
tests/runtime/: create_runtime_graph_info.h  edge_object_test.cc  kernel_exec_context_test.cc  kernel_impl_test.cc  partial_runtime_creator_test.cc  runtime_impl_test.cc  sequence_test.cc  tensor_impl_test.cc  tensor_sequence_test.cc  test_barrier.h
tests/testdata/: conv.onnx  ppq_test_qparams.json  quant_test.json
tests/utils/: buffer_data_stream_test.cc  buffered_cpu_allocator_test.cc  compact_buffer_manager_test.cc  cpu_block_allocator_test.cc  destructor_test.cc  stack_buffer_manager_test.cc  utils_test.cc
tools/: CMakeLists.txt  add_all_tensors_to_output.cc  benchmark.sh  benchmark_llama.cc  benchmark_llama_dataset.sh  benchmark_llama_multi.sh  benchmark_llama_single.sh  convert_onnx_opset_version.py  format-modified-files.sh  onnx_model_is_supported.cc  onnx_serializer.cc  pplnn.cc  pplnn.lua  pplnn.py  pplnn_llm.cc  pplnn_llm.py  sampler.cc  sampler.h  simple_flags.cc  simple_flags.h  test_nccl.cc  tokens_input_1024  tokens_input_128  tokens_input_256  tokens_input_512  tokens_input_8
tools/benchmark_dataset/: sample_gen_lens.txt  sample_input_ids.txt
tools/benchmark_llama/: app.cc  generation_state.cc  generation_state.h  model_confg.h  profiler.h  request.h  text_generator.cc  text_generator.h  thread_pool.h
tools/benchmark_llama_deprecated/: benchmark_llama.cc  sampler.cc
(+4537 files in other folders)
